--- a/backend1/package.json
+++ b/backend1/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/ws": "^8.5.10",
+    "chess.js": "^1.0.0-beta.8",
+    "ws": "^8.17.0"
+  }
 }
